@@ -269,6 +269,7 @@ else
   AC_CONFIG_FILES([javap], [chmod +x javap])
 fi
 fi
+IT_CP39408_JAVAH
 FIND_RHINO_JAR
 WITH_OPENJDK_SRC_ZIP
 WITH_HOTSPOT_SRC_ZIP
